# ML

./: .gitignore  README.md
datasets/: README.md
datasets/diabetes/: tst.csv  tst1.csv
src/diabetes/flashlight/: BUILD  WORKSPACE
src/diabetes/flashlight/src/: main.cpp
src/diabetes/keras/: diabetes_nn.py  diabetes_nn_model.h5  tst_sc.py
src/karate/cpp/: CMakeLists.txt
src/karate/cpp/src/: main.cpp
src/karate/py/: gnn_layer.py  karate_gnn.py
